BC-3647-2 created event