@@ -1,84 +1,140 @@
 package school.faang.user_service.service.event;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.mockito.junit.jupiter.MockitoExtension;
 import school.faang.user_service.dto.event.EventDto;
 import school.faang.user_service.dto.skill.SkillDto;
 import school.faang.user_service.entity.Skill;
 import school.faang.user_service.entity.User;
-import school.faang.user_service.exception.DataValidationException;
+import school.faang.user_service.entity.event.Event;
+import school.faang.user_service.exception.event.DataValidationException;
 import school.faang.user_service.repository.UserRepository;
-
-import java.util.Arrays;
+import school.faang.user_service.repository.event.EventRepository;
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
-
-@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 class EventServiceTest {
+    @InjectMocks
+    private EventService eventService;
+
+    @Mock
+    private EventRepository eventRepository;
+
     @Mock
     private UserRepository userRepository;
 
-    private final EventService eventService;
 
-    @Autowired
-    EventServiceTest(EventService eventService) {
-        this.eventService = eventService;
+    EventDto eventDto;
+    Event event;
+
+    @BeforeEach
+    void setUp() {
+        eventService = new EventService(eventRepository, userRepository);
+
+        User user = new User();
+        user.setId(1L);
+
+        Skill skill1 = new Skill();
+        skill1.setId(1L);
+        skill1.setTitle("Ability");
+        Skill skill2 = new Skill();
+        skill2.setId(2L);
+        skill2.setTitle("Expertise");
+        user.setSkills(List.of(skill1, skill2));
+
+        eventDto = new EventDto();
+        eventDto.setId(1L);
+        eventDto.setTitle("My Event");
+        eventDto.setStartDate(LocalDate.of(2023, 7, 27).atStartOfDay());
+        eventDto.setOwnerId(1L);
+        eventDto.setRelatedSkills(List.of(new SkillDto(1L, "Ability"), new SkillDto(2L, "Expertise")));
+
+        event = new Event();
+        event.setId(1L);
     }
 
     @Test
-    public void testValidateUserSkills_UserHasAllSkills() {
-        SkillDto skill1 = new SkillDto(1L, "Skill 1");
-        SkillDto skill2 = new SkillDto(2L, "Skill 2");
-        SkillDto skill3 = new SkillDto(3L, "Skill 3");
+    void testCreate_EventExists() {
+        List<Event> existingEvents = new ArrayList<>();
+        existingEvents.add(event);
 
-        List<SkillDto> requiredSkills = Arrays.asList(skill1, skill2, skill3);
-        Long ownerId = 1L;
-
-        User owner = new User();
-        owner.setId(ownerId);
-        owner.setSkills(Arrays.asList(
-                new Skill(1L, "Skill 1"),
-                new Skill(2L, "Skill 2"),
-                new Skill(3L, "Skill 3")
-        ));
-
-        when(userRepository.findById(ownerId)).thenReturn(Optional.of(owner));
-
-        EventDto event = new EventDto();
-        event.setRelatedSkills(requiredSkills);
-        event.setOwnerId(ownerId);
-
-        assertDoesNotThrow(() -> eventService.validateUserSkills(event));
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
     }
 
     @Test
-    public void testValidateUserSkills_UserMissingSkills() {
-        SkillDto skill1 = new SkillDto(1L, "Skill 1");
-        SkillDto skill2 = new SkillDto(2L, "Skill 2");
-        SkillDto skill3 = new SkillDto(3L, "Skill 3");
+    void testCreate_EventDoesNotExistReturnDto() {
+        User user = new User();
+        user.setId(1L);
 
-        List<SkillDto> requiredSkills = Arrays.asList(skill1, skill2, skill3);
-        Long ownerId = 1L;
+        Skill skill1 = new Skill();
+        skill1.setId(1L);
+        skill1.setTitle("Ability");
+        Skill skill2 = new Skill();
+        skill2.setId(2L);
+        skill2.setTitle("Expertise");
+        user.setSkills(List.of(skill1, skill2));
 
-        User owner = new User();
-        owner.setId(ownerId);
-        owner.setSkills(Arrays.asList(
-                new Skill(1L, "Skill 1"),
-                new Skill(2L, "Skill 2")
-        ));
+        when(userRepository.findById(anyLong())).thenReturn(Optional.of(user));
+        eventService = new EventService(eventRepository, userRepository);
+        when(eventRepository.findByEventId(event.getId())).thenReturn(new ArrayList<>());
+        when(eventRepository.save(any(Event.class))).thenReturn(event);
+        EventDto result = eventService.create(eventDto);
 
-        when(userRepository.findById(ownerId)).thenReturn(Optional.of(owner));
-
-        EventDto event = new EventDto();
-        event.setRelatedSkills(requiredSkills);
-        event.setOwnerId(ownerId);
-
-        assertThrows(DataValidationException.class, () -> eventService.validateUserSkills(event));
+        assertNotNull(result);
+        assertEquals(eventDto.getId(), result.getId());
     }
 
+    @Test
+    void testCreate_ValidOwnerId() {
+        User user = new User();
+        user.setId(1L);
+
+        eventDto.setOwnerId(1L);
+
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
+    }
+
+    @Test
+    void testCreate_IfOwnerIdNull() {
+        eventDto.setOwnerId(null);
+
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
+    }
+
+    @Test
+    void testCreate_IfOwnerIdNegative() {
+        eventDto.setOwnerId(-1L);
+
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
+    }
+
+    @Test
+    void testCreate_ValidEventTitle() {
+        eventDto.setTitle("My Title");
+
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
+    }
+
+    @Test
+    void testCreate_NullEventTitle() {
+        eventDto.setTitle(null);
+
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
+    }
+
+    @Test
+    void testCreate_BlankEventTitle() {
+        eventDto.setTitle("     ");
+
+        assertThrows(DataValidationException.class, () -> eventService.create(eventDto));
+    }
 }
